--- a/freesteads/socibuild/index.html
+++ b/freesteads/socibuild/index.html
@@ -169,7 +169,7 @@
         <!-- FOOTER --> 
         <footer class="main-footer">
             <div class="footer-container container">
-                <p>&copy; <span class="jsDate">2019</span> TylerDuprey.com</p>
+                <p>&copy; <span class="jsDate">2021</span> Freesteading.com</p>
             </div>
         </footer>
 				<script src="../layout-a-webpage/transcript-create-your-first-website.js"></script>
