--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <!-- FOOTER --> 
         <footer class="main-footer">
             <div class="footer-container container">
-                <p>&copy; <span class="jsDate">2019</span> tylerduprey.com</p>
+                <p>&copy; <span class="jsDate">2021</span> Freesteading.com</p>
             </div>
         </footer>
         <script async src="js/main.js"></script>
