Search footer updated

--- a/search/index.html
+++ b/search/index.html
@@ -114,11 +114,11 @@
         </div>
         
         <!-- FOOTER --> 
-        <footer class="main-footer">
-            <div class="footer-container container">
-                <p>&copy; <span class="jsDate">2019</span> TylerDuprey.com</p>
-            </div>
-        </footer>
+		<footer class="main-footer">
+			<div class="footer-container container">
+				<p>&copy; <span class="jsDate">2021</span> Freesteading.com</p>
+			</div>
+		</footer>
         <script src="../js/main.js"></script>
     </body>
 </html>
