--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<section class="hero">
 			<div class="hero-container">
 				<h1><i class="fas fa-flag"></i><br>About Freesteading</h1>
-				<p>Freesteading is defined as peacefully and legally declaring independence by physically moving away from violent or coercive governments.</p>
+				<p>Freesteading is defined as peacefully declaring independence by physically moving away from violent or coercive governments.</p>
 				<div class="btn-container">
 					<a class="fa-icon btn tutorials" href="about-freesteading/">Learn More</a>
 				</div>
