--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<h3>Socibuild</h3>
 								<p>Socibuild is a company that aims to curate prosperous, stimulating, eco-friendly communities in the countryside.</p>
 								<footer>
-										<a class="fa-icon btn" href="freesteads/socibuild/">Start Tutorial</a>
+										<a class="fa-icon btn" href="/freesteads/socibuild/">Learn More</a>
 								</footer>
 							</article>
 						</li>
@@ -152,7 +152,7 @@
 									<h3>Ocean Builders</h3>
 									<p>Ocean Builders is located at Linton Bay Marina on the Caribbean Sea in Panama. We are the first company to build a floating home.</p>
 									<footer>
-											<a class="fa-icon btn" href="/freesteads/ocean-builders/">Start Tutorial</a>
+											<a class="fa-icon btn" href="/freesteads/ocean-builders/">Learn More</a>
 									</footer>
 							</article>
 						</li>
@@ -164,7 +164,7 @@
 									<h3>Ventive Floathouse</h3>
 									<p>Ventive Floathouse plans to manufacture pill shaped floating "houses" that would provide spacious quarters on the deep ocean.</p>
 									<footer>
-											<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Start Tutorial</a>
+											<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Learn More</a>
 									</footer>
 							</article>
 						</li>
@@ -174,7 +174,7 @@
 				<aside class="article-list recommended">
 					<h2>Featured Projects</h2>
 					<ul>
-						<li class="article-card card">
+                        <li class="article-card card">
 							<article class="container">
 								<header>
 									<i class="fas fa-hands-helping"></i>
@@ -182,34 +182,34 @@
 								<h3>Socibuild</h3>
 								<p>Socibuild is a company that aims to curate prosperous, stimulating, eco-friendly communities in the countryside.</p>
 								<footer>
-										<a class="fa-icon btn" href="/freesteads/socibuild/">Start Tutorial</a>
+										<a class="fa-icon btn" href="/freesteads/socibuild/">Learn More</a>
 								</footer>
 							</article>
 						</li>
 						<li class="article-card card">
-								<article class="container">
-										
-									<header>
-										<i class="fas fa-ship"></i>
-									</header>
-										<h3>Ocean Builders</h3>
-										<p>Ocean Builders is located at Linton Bay Marina on the Caribbean Sea in Panama. We are the first company to build a floating home.</p>
-										<footer>
-												<a class="fa-icon btn" href="/freesteads/ocean-builders/">Start Tutorial</a>
-										</footer>
-								</article>
+							<article class="container">
+									
+								<header>
+									<i class="fas fa-ship"></i>
+								</header>
+									<h3>Ocean Builders</h3>
+									<p>Ocean Builders is located at Linton Bay Marina on the Caribbean Sea in Panama. We are the first company to build a floating home.</p>
+									<footer>
+											<a class="fa-icon btn" href="/freesteads/ocean-builders/">Learn More</a>
+									</footer>
+							</article>
 						</li>
-						<li class="article-card card">
-								<article class="container">
-										<header>
-											<i class="fas fa-capsules"></i>
-										</header>
-										<h3>Ventive Floathouse</h3>
-										<p>Ventive Floathouse plans to manufacture pill shaped floating "houses" that would provide spacious quarters on the deep ocean.</p>
-										<footer>
-												<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Start Tutorial</a>
-										</footer>
-								</article>
+                        <li class="article-card card">
+							<article class="container">
+									<header>
+										<i class="fas fa-capsules"></i>
+									</header>
+									<h3>Ventive Floathouse</h3>
+									<p>Ventive Floathouse plans to manufacture pill shaped floating "houses" that would provide spacious quarters on the deep ocean.</p>
+									<footer>
+											<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Learn More</a>
+									</footer>
+							</article>
 						</li>
 					</ul>
 				</aside>
