Fix other start buttons

--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -73,7 +73,7 @@
 								<h3>Socibuild</h3>
 								<p>Socibuild is a company that aims to curate prosperous, stimulating, eco-friendly communities in the countryside.</p>
 								<footer>
-										<a class="fa-icon btn" href="/freesteads/socibuild/">Start Tutorial</a>
+										<a class="fa-icon btn" href="/freesteads/socibuild/">Learn More</a>
 								</footer>
 							</article>
 						</li>
@@ -86,7 +86,7 @@
 									<h3>Ocean Builders</h3>
 									<p>Ocean Builders is located at Linton Bay Marina on the Caribbean Sea in Panama. We are the first company to build a floating home.</p>
 									<footer>
-											<a class="fa-icon btn" href="/freesteads/ocean-builders/">Start Tutorial</a>
+											<a class="fa-icon btn" href="/freesteads/ocean-builders/">Learn More</a>
 									</footer>
 							</article>
 						</li>
@@ -98,7 +98,7 @@
 									<h3>Ventive Floathouse</h3>
 									<p>Ventive Floathouse plans to manufacture pill shaped floating "houses" that would provide spacious quarters on the deep ocean.</p>
 									<footer>
-											<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Start Tutorial</a>
+											<a class="fa-icon btn" href="/freesteads/ventive-floathouse/">Learn More</a>
 									</footer>
 							</article>
 						</li>
