--- a/contact/index.html
+++ b/contact/index.html
@@ -77,7 +77,7 @@
 					</article>
                 </section>
 				<aside>
-					<form class="contact-form card" id="contact_form" action="https://formspree.io/tyler@tylerduprey.com" method="POST">
+					<form class="contact-form card" id="contact_form" action="https://formspree.io/f/mqkgwyao" method="POST">
 						<div class="container">
 							<h2>Say Hello</h2>
 							<h3>Feel free to reach out with the form below. I check entries to this form once everyday, and will try to respond in a timely manner.</h3>
