--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 								<h3>Stay Updated</h3>
 							</header>
 							<p class="container">Get emails for new posts and videos about freesteading!</p>
-							<form class="container"  action="https://formspree.io/tyler@tylerduprey.com" method="POST">
+							<form class="container"  action="https://formspree.io/f/mqkgwyao" method="POST">
 									<input type="email" placeholder="email@example.com" name="email" required />
 									<button type="submit" class="fa-icon">Sign Up</button>
 							</form>		
