Add More Freesteads

--- a/freesteads/free-state-project/index.html
+++ b/freesteads/free-state-project/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Socibuild | Freesteading</title>
+	<title>Free State Project | Freesteading</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -56,7 +56,7 @@
 			</nav>
 		</section>
 	</header>
-	<nav class="breadcrumbs container"><ul><li class="fa-icon breadcrumb-parent"><a href="/">Home</a></li><li class="fa-icon breadcrumb-parent"><a href="/freesteads/">Freesteads</a></li><li>Socibuild</li></ul></nav>
+	<nav class="breadcrumbs container"><ul><li class="fa-icon breadcrumb-parent"><a href="/">Home</a></li><li class="fa-icon breadcrumb-parent"><a href="/freesteads/">Freesteads</a></li><li>The Free State Project</li></ul></nav>
         
 	<div class="main-container container">
 		<!-- MAIN --> 
@@ -65,28 +65,26 @@
 			<section>
 				<article class="main-article">
 					<header>
-						<h1>Socibuild</h1>
+						<h1>Free State Project</h1>
 						<figure class="freestead-image card">
-							<a title="Visit Socibuild the startup society" href="https://socibuild.com/about/" target="_blank">
-								<img src="/img/socibuild-screenshot-voluntaryst-startup-society-freesteading.jpg" alt="Socibuild screenshot for freesteading.com">
+							<a title="Visit Socibuild the startup society" href="https://fsp.org/" target="_blank">
+								<img src="/img/the-free-state-project.jpg" alt="Socibuild screenshot for freesteading.com">
 							</a>
 						</figure>
 						<!-- Future video goes here -->
 						<figure style="display: none;" class="video-container card jsVideo" data-source="hINBjQMwAV8">
 						</figure>
 					</header>
-					<h2>About Socibuild</h2>
-					<p>Socibuild is a project to create intentional communities of like-minded people in rural areas. Socibuild has its roots in the basic income movement, and hopes to create a real-estate based fund that creates a basic income for its members.</p>
-					<p>Socibuild is in an early fundraising and proof of concept phase. They aren’t taking members yet but their goal is to start establishing communities after wrapping up fundraising.</p>
-					
+					<h2>About the Free State Project</h2>
+					<p>Coming Soon...</p>
 					<h2>Project Details</h2>
 					<ul>
-						<li><a title="Visit Socibuild the startup society" href="https://socibuild.com/about/" target="_blank">Socibuild's website</a></li>
-						<li><strong>Population</strong>: 0</li>
-						<li><strong>Residency</strong>: Closed</li>
-						<li><strong>Strategy</strong>: Intentional Community</li>
-						<li><strong>Principles</strong>: Basic Income, Environment, Prosperity</li>
-						<li><strong>Independence</strong>: Not Independent</li>
+						<li><a title="Visit FSP's website" href="https://www.fsp.org/" target="_blank">The Free State Project's website</a></li>
+						<li><strong>Population</strong>: </li>
+						<li><strong>Residency</strong>: </li>
+						<li><strong>Strategy</strong>: </li>
+						<li><strong>Principles</strong>: </li>
+						<li><strong>Independence</strong>: </li>
 					</ul>
 
 					<h2>Videos about this project</h2>
