--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -102,8 +102,44 @@
 									</footer>
 							</article>
 						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-crown"></i>
+								</header>
+								<h3>Liechtenstein</h3>
+								<p>This is arguably the most libertarian country in the world.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/liechtenstein/">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-route"></i>
+								</header>
+								<h3>Free State Project</h3>
+								<p>FSP is a libertarian project with the goal of moving as many politically active libertarians as possible to New Hampshire in order to create a "Free State." .</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/free-state-project/">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-compass"></i>
+								</header>
+								<h3>Liberland</h3>
+								<p>This uninhabited territory is a radically libertarian country within disputed and unclaimed land between Croatia and Serbia.</p>
+								<footer>
+										<a class="fa-icon btn" href="/freesteads/liberland/">Learn More</a>
+								</footer>
+							</article>
+						</li>
 					</ul>
-                </section>
+				</section>
             </main>
 			<aside class="main-aside">
 				<section>
