--- a/freesteads/ventive-floathouse/index.html
+++ b/freesteads/ventive-floathouse/index.html
@@ -67,7 +67,7 @@
 					<header>
 						<h1>Ventive Floathouse</h1>
 						<figure class="freestead-image card">
-							<a title="Visit Socibuild the startup society" href="https://socibuild.com/about/" target="_blank">
+							<a title="Visit Socibuild the startup society" href="https://ventivefloathouse.com/" target="_blank">
 								<img src="/img/ventive-floathouse-seasteading-freesteading.jpg" alt="Ventive Floathouse screenshot for freesteading.com">
 							</a>
 						</figure>
@@ -81,7 +81,7 @@
 					<p>In our opinion, Ventive Floathouse has the most innovative design in the freesteading movement.</p>
 					<h2>Project Details</h2>
 					<ul>
-						<li><a title="Visit Ventive Floathouse" href="https://https://ventivefloathouse.com/" target="_blank">Ventive Floathouse's website</a></li>
+						<li><a title="Visit Ventive Floathouse" href="https://ventivefloathouse.com/" target="_blank">Ventive Floathouse's website</a></li>
 						<li><strong>Population</strong>: 0</li>
 						<li><strong>Residency</strong>: Open</li>
 						<li><strong>Strategy</strong>: Seasteading</li>
