Add one more freestead

--- a/freesteads/Prospera/index.html
+++ b/freesteads/Prospera/index.html
@@ -67,8 +67,8 @@
 					<header>
 						<h1>Prospera</h1>
 						<figure class="freestead-image card">
-							<a title="Visit Liberland's website" href="https://liberland.org/" target="_blank">
-								<img src="/img/liberland-freesteading-project.jpg" alt="Socibuild screenshot for freesteading.com">
+							<a title="Visit Prospera's website" href="https://prospera.hn/" target="_blank">
+								<img src="/img/prospera-honduras-freesteading.jpg" alt="Prospera screenshot for freesteading.com">
 							</a>
 						</figure>
 						<!-- Future video goes here -->
@@ -81,7 +81,7 @@
 
 					<h2>Project Details</h2>
 					<ul>
-						<li><a title="Visit Liberland's" href="https://liberland.org/" target="_blank">Prospera's website</a></li>
+						<li><a title="Visit Prospera's website" href="https://prospera.hn/" target="_blank">Prospera's website</a></li>
 						<li><strong>Population</strong>: </li>
 						<li><strong>Residency</strong>: </li>
 						<li><strong>Strategy</strong>: </li>
