--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -138,6 +138,18 @@
 								</footer>
 							</article>
 						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-compass"></i>
+								</header>
+								<h3>Prospera</h3>
+								<p>A nearly autonomous Special Economic Zone in Honduras.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/prospera/">Learn More</a>
+								</footer>
+							</article>
+						</li>
 					</ul>
 				</section>
             </main>
