Added blue book cities

--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -141,12 +141,24 @@
                         <li class="article-card card">
 							<article class="container">
 								<header>
-									<i class="fas fa-compass"></i>
+									<i class="fas fa-solar-panel"></i>
 								</header>
 								<h3>Prospera</h3>
-								<p>A nearly autonomous Special Economic Zone in Honduras.</p>
+								<p>A nearly autonomous environmental Special Economic Zone in Honduras.</p>
 								<footer>
 									<a class="fa-icon btn" href="/freesteads/prospera/">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-book"></i>
+								</header>
+								<h3>Blue Book Cities</h3>
+								<p>A startup city project in the early stages of creating a city for inspiring innovation.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/blue-book-cities/">Learn More</a>
 								</footer>
 							</article>
 						</li>
