Add more freesteads

--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -129,18 +129,6 @@
                         <li class="article-card card">
 							<article class="container">
 								<header>
-									<i class="fas fa-compass"></i>
-								</header>
-								<h3>Liberland</h3>
-								<p>This uninhabited territory is a radically libertarian country within disputed and unclaimed land between Croatia and Serbia.</p>
-								<footer>
-										<a class="fa-icon btn" href="/freesteads/liberland/">Learn More</a>
-								</footer>
-							</article>
-						</li>
-                        <li class="article-card card">
-							<article class="container">
-								<header>
 									<i class="fas fa-solar-panel"></i>
 								</header>
 								<h3>Prospera</h3>
@@ -155,10 +143,58 @@
 								<header>
 									<i class="fas fa-book"></i>
 								</header>
+								<h3>Colon Free Zone</h3>
+								<p>A Special Economic Zone within borders of Panama.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/colon-free-zone/" target="_blank">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-compass"></i>
+								</header>
+								<h3>Liberland</h3>
+								<p>This uninhabited territory is a radically libertarian country within disputed and unclaimed land between Croatia and Serbia.</p>
+								<footer>
+										<a class="fa-icon btn" href="/freesteads/liberland/">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-book"></i>
+								</header>
+								<h3>City of Knowledge</h3>
+								<p>A Special Economic Zone in Panama dedicated to allowing innovators to create.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/city-of-knowledge/" target="_blank">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-book"></i>
+								</header>
 								<h3>Blue Book Cities</h3>
 								<p>A startup city project in the early stages of creating a city for inspiring innovation.</p>
 								<footer>
 									<a class="fa-icon btn" href="/freesteads/blue-book-cities/">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
+									<i class="fas fa-book"></i>
+								</header>
+								<h3>Sealand</h3>
+								<p>An old anti-aircraft platform in the North Sea converted into an independent Seastead.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/sealand/" target="_blank">Learn More</a>
 								</footer>
 							</article>
 						</li>
