Fix icons for new freesteads

--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -141,7 +141,7 @@
                         <li class="article-card card">
 							<article class="container">
 								<header>
-									<i class="fas fa-book"></i>
+									<i class="fas fa-plane"></i>
 								</header>
 								<h3>Colon Free Zone</h3>
 								<p>A Special Economic Zone within borders of Panama.</p>
@@ -165,7 +165,7 @@
                         <li class="article-card card">
 							<article class="container">
 								<header>
-									<i class="fas fa-book"></i>
+									<i class="fas fa-university"></i>
 								</header>
 								<h3>City of Knowledge</h3>
 								<p>A Special Economic Zone in Panama dedicated to allowing innovators to create.</p>
