--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -153,6 +153,18 @@
                         <li class="article-card card">
 							<article class="container">
 								<header>
+									<i class="fas fa-water"></i>
+								</header>
+								<h3>Sealand</h3>
+								<p>An old anti-aircraft platform in the North Sea converted into an independent Seastead.</p>
+								<footer>
+									<a class="fa-icon btn" href="/freesteads/sealand/" target="_blank">Learn More</a>
+								</footer>
+							</article>
+						</li>
+                        <li class="article-card card">
+							<article class="container">
+								<header>
 									<i class="fas fa-compass"></i>
 								</header>
 								<h3>Liberland</h3>
@@ -183,18 +195,6 @@
 								<p>A startup city project in the early stages of creating a city for inspiring innovation.</p>
 								<footer>
 									<a class="fa-icon btn" href="/freesteads/blue-book-cities/">Learn More</a>
-								</footer>
-							</article>
-						</li>
-                        <li class="article-card card">
-							<article class="container">
-								<header>
-									<i class="fas fa-book"></i>
-								</header>
-								<h3>Sealand</h3>
-								<p>An old anti-aircraft platform in the North Sea converted into an independent Seastead.</p>
-								<footer>
-									<a class="fa-icon btn" href="/freesteads/sealand/" target="_blank">Learn More</a>
 								</footer>
 							</article>
 						</li>
