--- a/freesteads/index.html
+++ b/freesteads/index.html
@@ -56,7 +56,7 @@
 				</nav>
 			</section>
         </header>
-        <nav class="breadcrumbs container"><ul><li class="fa-icon breadcrumb-parent"><a href="../">Home</a></li><li>Tutorials</li></ul></nav>
+        <nav class="breadcrumbs container"><ul><li class="fa-icon breadcrumb-parent"><a href="../">Home</a></li><li>Freasteads</li></ul></nav>
         
         <div class="main-container container">
             <!-- MAIN --> 
